<?xml version="1.0"?>
<package format="2">
  <name>build_navicore</name>
  <version>0.0.0</version>
  <description>The build_navicore package</description>

  <maintainer email="nate@navifra.com">former</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
