<?xml version="1.0"?>
<package format="2">
  <name>motor_msgs</name>
  <version>0.0.0</version>
  <description>The motor_msgs package</description>

  <maintainer email="cofouner@navifra.com">nate</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>core</build_depend>

 <build_export_depend>message_runtime</build_export_depend>
 
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>  
  <exec_depend>message_runtime</exec_depend>

</package>
