<?xml version="1.0"?>
<package format="2">
  <name>nc_calibrator</name>
  <version>0.0.0</version>
  <description>The nc_calibrator package</description>

  <maintainer email="navifra@todo.todo">former</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <license>TODO</license>
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>core_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>boost</depend>
</package>
