<?xml version="1.0"?>
<package format="2">
    <name>nc_brain_map_server</name>
    <version>0.0.0</version>
    <description>The nc_brain_map_server package</description>
    <license>TODO</license>
    <maintainer email="cof-sally@navifra.com">sally</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>nav_msgs</depend>
    <depend>roscpp</depend>
    <depend>tf2</depend>  
    <depend>core</depend>
    <depend>core_msgs</depend>
    <depend>yaml-cpp</depend>

</package>
